--- a/msvc/rtos.vcxproj.filters
+++ b/msvc/rtos.vcxproj.filters
@@ -130,13 +130,16 @@
     <ClInclude Include="..\source\system_timer\system_timer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\source\lock\lock.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\external\st\STM32F10x\startup_stm32f10x_hd.s">
-      <Filter>external</Filter>
-    </None>
     <None Include="..\README.md">
       <Filter>other</Filter>
+    </None>
+    <None Include="..\external\st\STM32F10x\armcc\startup_stm32f10x_hd.s">
+      <Filter>external</Filter>
     </None>
   </ItemGroup>
 </Project>
